--- a/smartcommunity-property/src/main/resources/application.yml
+++ b/smartcommunity-property/src/main/resources/application.yml
@@ -15,4 +15,6 @@ spring:
 #设置端口
 server:
   port: 7000
-#设置端口
+mybatis:
+  mapper-locations: classpath:mapper/*.xml
+  type-aliases-package: com.bishe.smartcommunity.property.domain
