--- a/smartcommunity-common/pom.xml
+++ b/smartcommunity-common/pom.xml
@@ -55,6 +55,11 @@
             <artifactId>junit-jupiter-api</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>1.3.2</version>
+        </dependency>
 
     </dependencies>
 
