--- a/smartcommunity-resident/src/main/resources/application.yml
+++ b/smartcommunity-resident/src/main/resources/application.yml
@@ -1,12 +1,30 @@
-server.servlet.encoding.charset=UTF-8
-server.port=8081
-spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,classpath:/templates/
-server.default_token_valid_time=1800
+#整合mybatis-plus
+#mybatis-plus:
+#  mapper-locations: classpath:/mapper/*.xml
+#  global-config:
+#    db-config:
+#      id-type: auto
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/sc_visitor?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=123
 
-mybatis.config-location=classpath:config/mybatis-config.xml
-mybatis.mapper-locations=classpath:mapper/*.xml
-mybatis.type-aliases-package=com.bishe.smartcommunity.visitor.domain
+#配置数据源
+spring:
+  datasource:
+    url: jdbc:mysql://127.0.0.1:3306/sc_resident?serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8
+    username: root
+    password: 123
+    driver-class-name: com.mysql.jdbc.Driver
+  application:
+    name: smartcommunity-resident
+  cloud:
+    nacos:
+      server-addr: 127.0.0.1:8848
+  servlet:
+    multipart:
+      max-file-size: -1
+      max-request-size: -1
+#设置端口
+server:
+  port: 8000
+mybatis:
+  mapper-locations: classpath:mapper/*.xml
+  type-aliases-package: com.bishe.smartcommunity.resident.domain
