--- a/smartcommunity-vehicle/src/main/resources/application.yml
+++ b/smartcommunity-vehicle/src/main/resources/application.yml
@@ -14,3 +14,6 @@ spring:
 #设置端口
 server:
   port: 9000
+mybatis:
+  type-aliases-package: com.bishe.smartcommunity.vehicle.domain
+  mapper-locations: classpath:mapper/*.xml
