--- a/smartcommunity-visitor/src/main/resources/application.yml
+++ b/smartcommunity-visitor/src/main/resources/application.yml
@@ -1,13 +1,7 @@
-#整合mybatis-plus
-mybatis-plus:
-  mapper-locations: classpath:/mapper/**/*.xml
-  global-config:
-    db-config:
-      id-type: auto
 #配置数据源
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/sc_visitor?serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8
+    url: jdbc:mysql://127.0.0.1:3306/sc_visitors?serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8
     username: root
     password: 123
     driver-class-name: com.mysql.jdbc.Driver
@@ -20,3 +14,6 @@ spring:
 #设置端口
 server:
   port: 6000
+mybatis:
+  type-aliases-package: com.bishe.smartcommunity.visitor.domain
+  mapper-locations: mapper/*.xml
